fix: changelog config

--- a/.nyx.yaml
+++ b/.nyx.yaml
@@ -14,7 +14,7 @@ releasePrefix: "v"
 initialVersion: "v2.3.0"
 changelog:
   path: "CHANGELOG.md"
-  template: "./.ci/CHANGELOG.tpl"
+  template: "./CHANGELOG.tpl"
   sections:
     "Added": "^feat$"
     "Fixed": "^fix$"
