--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -27,5 +27,5 @@ jobs:
         with:
           command: 'publish'
         env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GH_TOKEN: ${{ secrets.PAT_TOKEN }}
       
