--- a/.nyx.yaml
+++ b/.nyx.yaml
@@ -53,6 +53,7 @@ releaseTypes:
         CI: "^true$"                 # only match this release type when running on CI servers
       matchWorkspaceStatus: "CLEAN"  # only match this release type when the repository is clean
       publish: "true"
+      publishPrerelease: "true"
     hotfix:
       collapseVersions: true
       collapsedVersionQualifier: "{{#sanitizeLower}}{{branch}}{{/sanitizeLower}}"
