--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -6,7 +6,7 @@ release:
   prerelease: auto
   name_template: "Konstellation CLI {{.Version}}"
   github:
-    owner: konstellation-io
+    owner: alpiquero
     name: kai-kli
 
 # https://goreleaser.com/customization/hooks/
@@ -58,7 +58,7 @@ archives:
 nfpms:
   - license: MIT
     maintainer: Konstellation
-    homepage: https://github.com/konstellation-io/kai-kli
+    homepage: https://github.com/alpiquero/kai-kli
     description: CLI tool to manage Konstellation
     file_name_template: "{{ .ProjectName }}_{{ .Version }}_{{ .Os }}-{{ .Arch }}"
     bindir: /usr
