--- a/.nyx.yaml
+++ b/.nyx.yaml
@@ -14,7 +14,6 @@ git:
 changelog:
   path: "CHANGELOG.md"
   template: "CHANGELOG.tpl"
-  append: head
   sections:
     "Added": "^feat$"
     "Fixed": "^fix$"
@@ -24,73 +23,22 @@ changelog:
 releaseTypes: 
   enabled: 
     - mainline
-    - integration
-    - hotfix
-    - release
-    - maintenance
     - internal
   publicationServices: 
     - github
   items: 
     # "mainline" overrides the release type with the same name from the preset
     mainline:
+      description: "{{#fileContent}}CHANGELOG.md{{/fileContent}}"
       filterTags: "^({{configuration.releasePrefix}})?([0-9]\\d*)\\.([0-9]\\d*)\\.([0-9]\\d*)$"
-      gitCommit: "true"
+      gitCommit: "false"
       gitPush: "true"
       gitTag: "true"
       matchBranches: "^main$"
       matchEnvironmentVariables: 
         CI: "^true$"                 # only match this release type when running on CI servers
       matchWorkspaceStatus: "CLEAN"  # only match this release type when the repository is clean
-      publish: true
-    integration:
-      collapseVersions: true
-      collapsedVersionQualifier: "{{#sanitizeLower}}{{branch}}{{/sanitizeLower}}"
-      filterTags: "^({{configuration.releasePrefix}})?([0-9]\\d*)\\.([0-9]\\d*)\\.([0-9]\\d*)(-develop(\\.([0-9]\\d*))?)$"
-      gitCommit: "true"
-      gitPush: "true"
-      gitTag: "true"
-      matchBranches: "^develop$"
-      matchEnvironmentVariables: 
-        CI: "^true$"                 # only match this release type when running on CI servers
-      matchWorkspaceStatus: "CLEAN"  # only match this release type when the repository is clean
       publish: false
-    hotfix:
-      collapseVersions: true
-      collapsedVersionQualifier: "{{#sanitizeLower}}{{branch}}{{/sanitizeLower}}"
-      filterTags: "^({{configuration.releasePrefix}})?([0-9]\\d*)\\.([0-9]\\d*)\\.([0-9]\\d*)(-hotfix(([0-9a-zA-Z]*)(\\.([0-9]\\d*))?)?)$"
-      gitCommit: "true"
-      gitPush: "true"
-      gitTag: "true"
-      matchBranches: "^hotfix((-|\\/)[0-9a-zA-Z-_]+)?$"
-      matchEnvironmentVariables: 
-        CI: "^true$"                 # only match this release type when running on CI servers
-      matchWorkspaceStatus: "CLEAN"  # only match this release type when the repository is clean
-      publish: false
-    release:
-      collapseVersions: true
-      collapsedVersionQualifier: "{{#firstLower}}{{branch}}{{/firstLower}}"
-      filterTags: "^({{configuration.releasePrefix}})?([0-9]\\d*)\\.([0-9]\\d*)\\.([0-9]\\d*)(-release((\\.([0-9]\\d*))?)?)$"
-      gitCommit: "true"
-      gitPush: "true"
-      gitTag: "true"
-      matchBranches: "^release(-|/)({{configuration.releasePrefix}})?([0-9|x]\\d*)(\\.([0-9|x]\\d*)(\\.([0-9|x]\\d*))?)?$"
-      matchEnvironmentVariables: 
-        CI: "^true$"                 # only match this release type when running on CI servers
-      matchWorkspaceStatus: "CLEAN"  # only match this release type when the repository is clean
-      publish: false
-      versionRangeFromBranchName: true
-    maintenance:
-      filterTags: "^({{configuration.releasePrefix}})?([0-9]\\d*)\\.([0-9]\\d*)\\.([0-9]\\d*)$"
-      gitCommit: "true"
-      gitPush: "true"
-      gitTag: "true"
-      matchBranches: "^[a-zA-Z]*([0-9|x]\\d*)(\\.([0-9|x]\\d*)(\\.([0-9|x]\\d*))?)?$"
-      matchEnvironmentVariables: 
-        CI: "^true$"                 # only match this release type when running on CI servers
-      matchWorkspaceStatus: "CLEAN"  # only match this release type when the repository is clean
-      publish: true
-      versionRangeFromBranchName: true
     # "internal" overrides the release type with the same name from the preset adding some qualifiers and is the global fallback for all release types
     internal:
       collapseVersions: true
